# smt-router

./: .gitignore  CHANGELOG.md  LICENSE  README.md
docs/: GROK_FAMILY_ROUTING.md
paper/: bibliography.bib  main.tex
paper/sections/: 01_intro.tex  02_background.tex  02_equation.tex  03_framework.tex  03_measurement_gap.tex  04_convergence.tex  04_learned_phi.tex  05_adversarial.tex  05_scaling.tex  06_measurement_gap.tex  06_theory.tex  07_empirical.tex  07_related_work.tex  07b_learned_phi.tex  07c_v3_ablation.tex  08_discussion.tex  08_related_work.tex  09_conclusion.tex  09_discussion.tex  10_conclusion.tex  appendix_adversarial.tex  appendix_convergence.tex
router/: __init__.py  config.py  data_pipeline.py  engine.py  eval_bilinear.py  gates.py  learned_phi.py  leave_one_out.py  model_registry.py  models.py  phi_evaluators.py  registry.py  scorer.py  train_bilinear.py  weight_learner.py
rust-sgl-policy-smt/: Cargo.toml  README.md
rust-sgl-policy-smt/docs/: spec.md
rust-sgl-policy-smt/src/: config.rs  cost.rs  features.rs  gate.rs  learner.rs  lib.rs  score.rs  sglang_stub.rs  state.rs
rust-sgl-policy-smt/tests/: policy_smt.rs
