[package]
name = "sgl-policy-smt"
version = "0.1.0"
edition = "2021"
authors = ["Pranav Lakherwal <pranav.lakherwal@gmail.com>"]
description = "S(M,T): outcome-learned routing policy for SGLang's Model Gateway. Draft skeleton for upstream PR."
license = "Apache-2.0"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
# Lightweight set; matches SGLang gateway's existing dependency surface.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"

# Once upstreamed these become a dev/path dependency on the gateway crate:
# sglang-gateway = { path = "../sglang/sgl-model-gateway" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
